--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="euforia logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\euforia logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="euforia logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\euforia logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
